  customization packages to allow partners to opt out of or replace particular
  console scripts.

- LP #449683 Moved initial data for bootstrapping Karl in the core and made
  overridable via utility registrations on the interfaces in
  karl.bootstrapping.interfaces.

- LP #449683 Moved Paste Deploy application factory (aka run.py) into core (as
  application.py).

- LP 449691 Moved evolve script to core and updated it to use utility
  registrations in ZCA to find packages to evolve.  This allows us to maintain
  a set of evolution steps inside the core that would be common to all
  instances of Karl while still allowing for customer specific evolutions in
  the customization packages.

3.14 (2009-09-08)
-----------------

- Hide all states in workflow UI that aren't current and have no valid
  exit transitions.

- Fixed error message in error page middleware.

- Merged 'chrism_workflow' branch.

- LP #418695 Bold communities for which logged in user is moderator in "My
  communities" portlet.

- LP #422571 Added convert_entities function to karl.views.utils.  Updated atom
  entry adapters to convert entities in content.

- LP #422572 Made some changes to atom feed based on feed validator
  recommendations: Added "updated" element to feed.  Added rel="self" attribute
  to "link" elements.

- Fixed bug discovered in alert digests--email recipients were not being
  properly passed as a list.  Digests could not have worked at all.  Surprised
  there was no bug report.  (15 users in OSI have alert preferences set to
  digest.)

- LP #422586 Enabled alert digests to send attachments via email.

3.13 (2009-08-26)
-----------------

- Ignore emails with a header that indicates they were auto-generated,
  such as out of office replies.  Like Mailman, Karl now looks for the
  non-standard but widely supported Precedence header, as well as the
  new, standard Auto-Submitted field.

3.12 (2009-08-19)
-----------------
